--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -75,7 +75,8 @@
     "wawoff2": "2.0.1",
     "webpack": "5.76.0",
     "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.10.0"
+    "webpack-cli": "4.10.0",
+    "which": "4.0.0"
   },
   "bugs": "https://github.com/excalidraw/excalidraw/issues",
   "repository": "https://github.com/excalidraw/excalidraw",
